Revert "Remove flags pom java version"
This reverts commit d484aa1dac8b135b524aa20e98fdfbfe94f790b0.