@@ -413,6 +413,11 @@
         <configuration>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <reuseForks>false</reuseForks>
+          <argLine>
+            --add-opens java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED
+            --add-opens java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
+            --add-opens java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED
+          </argLine>
           <includes>
             <include>**/*Test.java</include>
           </includes>
